<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:id="@+id/rootView"
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/act_content_bg">
  
    <RelativeLayout 
        android:orientation="vertical"
        android:background="@drawable/map_top_bg" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <Button android:id="@+id/btn_back" android:layout_centerVertical="true" android:layout_marginLeft="10dp" android:paddingLeft="5dp" android:textSize="18.0sp" android:textColor="#ffffff"  android:background="@drawable/selector_btn_back" android:layout_width="wrap_content" android:layout_height="wrap_content"   android:text="@string/btn_back" />
        <TextView android:layout_centerInParent="true" android:textSize="20.0sp" android:textColor="@color/white"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_text_person" />   
   </RelativeLayout>
      
    <LinearLayout 
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">

        <LinearLayout 
            style="@style/leba_bg_layout">                  
        
                <LinearLayout
                    style="@style/leba_bg_top_layout" android:clickable="false">
                    <TextView style="@style/text_style1" android:text="@string/setting_text_account" android:layout_weight="1.0" />
	                <TextView android:id="@+id/tv_account" style="@style/text_style2" android:layout_weight="1" />      
                    <ImageView android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:src="@drawable/setting_arrow"/>
                </LinearLayout>
                
                <View android:background="@color/shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
                
           
                 <LinearLayout android:id="@+id/ll_emailset"
                 	 style="@style/leba_bg_mid_layout">
                     <TextView style="@style/text_style1" android:text="@string/setting_text_email" android:layout_weight="1.0" />
                     <TextView android:id="@+id/tv_email" style="@style/text_style2" android:layout_weight="1" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:src="@drawable/setting_arrow"/>
                 </LinearLayout>
                
                 <View android:background="@color/shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
                      
       
                <LinearLayout android:id="@+id/ll_phoneset"
                    style="@style/leba_bg_bottom_layout">
                    <TextView style="@style/text_style1" android:text="@string/setting_text_phone" android:layout_weight="1.0" />
                    <TextView android:id="@+id/tv_phone"  style="@style/text_style2" android:layout_weight="1" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:src="@drawable/setting_arrow"/>
                </LinearLayout>     
                                        
       </LinearLayout>
       
        
       <LinearLayout 
                style="@style/leba_bg_layout">                  
          
                <LinearLayout android:id="@+id/ll_nameset"
                    style="@style/leba_bg_top_layout">
                    <TextView style="@style/text_style1" android:text="@string/setting_text_name" android:layout_weight="1.0" />
                    <TextView android:id="@+id/tv_truename" style="@style/text_style2" android:layout_weight="1" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:src="@drawable/setting_arrow"/>
                </LinearLayout>
                
                <View android:background="@color/shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
                
        
                 <LinearLayout android:id="@+id/ll_sexset"
                 	 style="@style/leba_bg_mid_layout">
                     <TextView style="@style/text_style1" android:text="@string/setting_text_sex" android:layout_weight="1.0" />
                     <TextView android:id="@+id/tv_sex"  style="@style/text_style2" android:layout_weight="1" />
                     <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:src="@drawable/setting_arrow"/>
                 </LinearLayout>
                
                 <View android:background="@color/shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
                      
       
                <LinearLayout android:id="@+id/ll_birthdayset"
                    style="@style/leba_bg_bottom_layout">
                    <TextView style="@style/text_style1" android:text="@string/setting_text_birthday" android:layout_weight="1.0" />
                    <TextView android:id="@+id/tv_birthday" style="@style/text_style2" android:layout_weight="1" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="12.0dip" android:src="@drawable/setting_arrow"/>
                </LinearLayout>                             
            </LinearLayout>

        
        <Button
	     android:id="@+id/btn_save"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginLeft="10.0dip" 
	     android:layout_marginTop="10.0dip" 
	     android:layout_marginRight="10.0dip"   
	     android:background="@drawable/selector_btn_white"   
	     android:text="@string/setting_commit_set"
	     style="@style/text_whitebtn_style" />
       
            
    </LinearLayout>     

    
</LinearLayout>

