<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/device_bg">

    <RelativeLayout 
        android:id="@+id/title_bar"
        android:orientation="vertical"
        android:background="@drawable/title_bar" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <Button android:id="@+id/btn_back" android:layout_centerVertical="true" android:layout_marginLeft="10dp" android:paddingLeft="5dp" android:textSize="18.0sp" android:textColor="#ffffff"  android:background="@drawable/selector_btn_back" android:layout_width="wrap_content" android:layout_height="wrap_content"   android:text="@string/btn_back" />
        <TextView android:layout_centerInParent="true" android:textSize="20.0sp" android:textColor="@color/white"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clock_text_title" />
    </RelativeLayout>
        
    <LinearLayout 
           android:layout_below="@id/title_bar"
           style="@style/leba_bg_layout">                  
     
           <LinearLayout 
               android:id="@+id/ll_setClockName"
               style="@style/leba_bg_top_layout" 
               android:minHeight="60dp">
               <TextView android:layout_width="80dp" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:textSize="15sp" android:textColor="#7e7e7e" android:text="@string/clock_text_name" />
               <TextView android:id="@+id/tvClockName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:textSize="15sp" android:textColor="#0098fe" android:text=""/>      
              
           </LinearLayout>  
           
              <View android:background="@color/shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
              
                   
           <LinearLayout 
               android:id="@+id/ll_setClockTime"
               style="@style/leba_bg_mid_layout" 
               android:minHeight="60dp">
               <TextView android:layout_width="80dp" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:textSize="15sp" android:textColor="#7e7e7e" android:text="@string/clock_text_time" />
               <TextView android:id="@+id/tvClockTime" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:textSize="15sp" android:textColor="#0098fe" android:text="00:00"/>      
              
           </LinearLayout>         
           
           <View android:background="@color/shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
                 
           <LinearLayout 
               android:id="@+id/ll_setWeekTime"
               style="@style/leba_bg_bottom_layout"
               android:minHeight="60dp">
               <TextView android:layout_width="80dp" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:textSize="15sp" android:textColor="#7e7e7e" android:text="@string/clock_text_week" />
               <TextView android:id="@+id/tvWeekTime" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:textSize="15sp" android:textColor="#0098fe" android:text="周一,周二,周三"/>   
              
           </LinearLayout>  
                                      
      </LinearLayout>
            
             
        
	  <LinearLayout
	  android:id="@+id/bottom_layout"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_alignParentBottom="true"
	  android:layout_marginLeft="10.0dip" 
	  android:layout_marginBottom="10.0dip" 
	  android:layout_marginRight="10.0dip" >
	      
	         
		  <Button
		  android:id="@+id/btn_ok"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:layout_marginRight="5.0dip"   
	      android:background="@drawable/selector_btn_white"   
	      android:layout_weight="1"
	      android:text="@string/btn_sure"
	      style="@style/text_whitebtn_style" />
	      
	       <Button
	       android:id="@+id/btn_cancel"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:layout_marginLeft="5.0dip"   
	       android:background="@drawable/selector_btn_white"   
	       android:layout_weight="1"
	       android:text="@string/btn_cancel"
	       style="@style/text_whitebtn_style" />
	  </LinearLayout>
  
    
    
</RelativeLayout>
