<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginpage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/common_bg" >
    


    <RelativeLayout 
        android:id="@+id/title_bar"
        android:orientation="vertical"
        android:background="@drawable/title_bar" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <Button android:id="@+id/btn_back" android:layout_centerVertical="true" android:layout_marginLeft="10dp" android:paddingLeft="5dp" android:textSize="18.0sp" android:textColor="#ffffff"  android:background="@drawable/selector_btn_back" android:layout_width="wrap_content" android:layout_height="wrap_content"   android:text="@string/btn_back" />
        <TextView android:layout_centerInParent="true" android:textSize="20.0sp" android:textColor="@color/white"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_text_register" />
    </RelativeLayout>
    

    <LinearLayout    
      android:layout_below="@id/title_bar"
	  android:orientation="vertical" 
	  android:layout_width="fill_parent" 
	  android:layout_height="fill_parent">
               
	    <LinearLayout 
	        android:orientation="vertical" 
	        android:background="@drawable/shape_bg" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="10.0dip" 
	        android:layout_marginTop="20.0dip" 
	        android:layout_marginRight="10.0dip">       
	      
	        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip">
	            <TextView android:textSize="18.0sp" android:textColor="#6d6d6d"  android:layout_width="90dp" android:layout_height="wrap_content" android:gravity="right" android:text="@string/register_text_username" />
	            <EditText android:textSize="16.0sp" android:textColor="#ff545454" android:id="@+id/name" android:background="@android:color/white" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="15.0dip" android:maxLength="20" android:singleLine="true" />
	        </LinearLayout>
	        
	        <View android:background="@drawable/shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
	                
	        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip">
	            <TextView android:textSize="18.0sp" android:textColor="#6d6d6d" android:layout_width="90dp" android:layout_height="wrap_content" android:gravity="right" android:text="@string/register_text_password"/>
	            <EditText android:textSize="16.0sp" android:textColor="#ff545454" android:id="@+id/password" android:background="@android:color/white" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="15.0dip"  android:maxLength="20"   android:inputType="textPassword"/>
	        </LinearLayout>
	          
	        <View android:background="@drawable/shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
	                
	        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip">
	            <TextView android:textSize="18.0sp" android:textColor="#6d6d6d" android:layout_width="90dp" android:layout_height="wrap_content" android:gravity="right" android:text="@string/register_text_email" />
	            <EditText android:textSize="16.0sp" android:textColor="#ff545454" android:id="@+id/email" android:background="@android:color/white" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="15.0dip"  android:maxLength="20"   android:inputType="textEmailAddress"/>
	        </LinearLayout>
	        
	        <View android:background="@drawable/shape_line" android:layout_width="fill_parent" android:layout_height="1.0px" />        	        
	        
	       <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="50.0dip">
	            <TextView android:textSize="18.0sp" android:textColor="#6d6d6d" android:layout_width="90dp" android:layout_height="wrap_content" android:gravity="right" android:text="@string/register_text_phone" />
	            <EditText android:textSize="16.0sp" android:textColor="#ff545454" android:id="@+id/phone" android:background="@android:color/white" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="15.0dip"  android:maxLength="20"   android:inputType="phone"/>
	        </LinearLayout>
	        
	    </LinearLayout>
	    
	    <RelativeLayout 
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="10.0dip" 
	        android:layout_marginTop="10.0dip"
	        android:layout_marginRight="10.0dip">   
	         
	        
	        <LinearLayout 
	        android:id="@+id/linearLayout"
	        android:layout_alignParentRight="true"
	        android:orientation="vertical" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content">          
	            <Button android:id="@+id/register_btn_ok"  android:textSize="18.0sp" android:textColor="#ffffff"  android:background="@drawable/selector_btn_ok" android:layout_width="wrap_content" android:layout_height="wrap_content"   android:text="@string/btn_sure" />
	            <Button android:id="@+id/register_btn_cancel" android:layout_marginTop="10dp"  android:textSize="18.0sp" android:textColor="#494949"  android:background="@drawable/selector_btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content"  android:text="@string/btn_cancel" />
	        </LinearLayout> 
	        
	        
	        <TextView 
	            android:layout_marginLeft="10dp"
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:layout_toLeftOf="@id/linearLayout"
	            android:layout_centerVertical="true"
	            android:textSize="14.0sp" 
	            android:textColor="#3e3f3c" 
	            android:lineSpacingExtra="3dp"
	            android:text="@string/register_tip" />
	   
	      
	     
	   </RelativeLayout>
    
    </LinearLayout> 
  
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="5dp"
      android:textColor="#607a84"
      android:text="@string/bottom_text" />
    

</RelativeLayout>
